<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Apply Workout</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="first">Welcome</string>
    <string name="secound">Andra sidan</string>
    <string name="buttons">Click</string>
    <string name="title_activity_third">Third</string>
    <string name="sNew">New</string>
    <string name="load">Load</string>

    <color name="grite">#eeeeee</color>
    <color name="darkGray">#262626</color>

    <string name="title_activity_page_new">PageNew</string>

    <string-array name="exercise">
        <item>Bench Press</item>
        <item>Dumbbell Press</item>
        <item>Pushups</item>
        <item>Situps</item>
        <item>Squats</item>
    </string-array>
    
    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string name="exercise_prompt">Execise</string>
    <string name="set">Sets</string>
    <string name="rep">Reps</string>

    <dimen name="sInput">170px</dimen>

    <string name="comnet">Comments</string>
    <string name="title_activity_show_res">ShowRes</string>
    <string name="dT">Date</string>
    <string name="title_activity_graf">GrafActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="Name">Name</string>
    <string name="Length">Length(cm/m)</string>
    <string name="Weigth">Weigth(kg)</string>
    <string name="Profile">Profile</string>
    <string name="Motivation">Motivation</string>
    <string name="ckSave">ckSave</string>
    <string name="maleSym">♂</string>
    <string name="femSym">♀</string>
    <string name="strProf">Profile</string>
    <string name="strPro">Profile</string>
    <string name="strSave">Save</string>
    <string name="strW">Weigth</string>
    <string name="title_activity_res_select">ResSelect</string>

</resources>
