<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grite"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/first"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/darkGray" />

		 <Button
		     android:id="@+id/buttonLoad"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_alignLeft="@+id/textWelcome"
		     android:layout_alignRight="@+id/textWelcome"
		     android:layout_below="@+id/buttonNew"
		     android:layout_marginTop="30dp"
		     android:onClick="ckLoad"
		     android:text="@string/load"
		     android:textColor="@color/grite" />

		 <Button
		     android:id="@+id/Button01"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_alignLeft="@+id/buttonLoad"
		     android:layout_alignRight="@+id/textWelcome"
		     android:layout_below="@+id/buttonLoad"
		     android:layout_marginTop="30dp"
		     android:onClick="ckPro"
		     android:text="@string/strPro"
		     android:textColor="@color/grite" />

		 <Button
		     android:id="@+id/buttonNew"
		     style="@drawable/ic_launcher"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_alignLeft="@+id/textWelcome"
		     android:layout_alignRight="@+id/buttonLoad"
		     android:layout_below="@+id/textWelcome"
		     android:layout_marginTop="56dp"
		     android:onClick="ckNew"
		     android:text="@string/sNew"
		     android:textColor="@color/grite"
		     android:textColorHint="@color/grite" />

</RelativeLayout>
